# AIShell

./: README.md  pyproject.toml  setup.py
aicli/: __init__.py  main.py
aicli.egg-info/: PKG-INFO  entry_points.txt  requires.txt
aicli/aicli.egg-info/: SOURCES.txt
aicli/config/: settings.py
aicli/services/: ai_service.py  command_executor.py
aicli/utils/: exceptions.py  history_manager.py
